Fixed books.htm on tablet view

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -180,6 +180,7 @@ footer {
     background-image: none;
     padding: 0;
   }
+  .books li { width: 100%; }
   
 }
 
